Exact ad unit size per screen width: https://support.google.com/adsense/answer/6307124?hl=en&ref_topic=1307438 Bug: ads not centered

--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -24,3 +24,22 @@
 a.table-links {
     color: #000;
 }
+
+.responsive-ad {
+    width: 200px;
+    height: 60px;
+}
+
+@media(min-width: 500px) {
+    .responsive-ad {
+        width: 468px;
+        height: 60px;
+    }
+}
+
+@media(min-width: 800px) {
+    .responsive-ad {
+        width: 728px;
+        height: 90px;
+    }
+}
